--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "vk-adult",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.25",
     "@types/chrome": "^0.0.271",
+    "@types/node": "^22.5.5",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   }
