--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["src/*"],
+    },
   },
-  "include": ["src"]
+  "include": ["src"],
+  "references": [{ "path": "tsconfig.node.json" }]
 }
